Modified migration to include Foreign Key

--- a/Pages/Inventory/Delete.cshtml
+++ b/Pages/Inventory/Delete.cshtml
@@ -13,6 +13,12 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.InventoryItem.UserId)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.InventoryItem.UserId)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.InventoryItem.UpdateDate)
         </dt>
         <dd class="col-sm-10">
