--- a/Pages/Inventory/Edit.cshtml
+++ b/Pages/Inventory/Edit.cshtml
@@ -15,14 +15,14 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="InventoryItem.Id" />
             <div class="form-group">
+                <label asp-for="InventoryItem.UserId" class="control-label"></label>
+                <input asp-for="InventoryItem.UserId" class="form-control" />
+                <span asp-validation-for="InventoryItem.UserId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="InventoryItem.UpdateDate" class="control-label"></label>
                 <input asp-for="InventoryItem.UpdateDate" class="form-control" />
                 <span asp-validation-for="InventoryItem.UpdateDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="InventoryItem.PC" class="control-label"></label>
-                <input asp-for="InventoryItem.PC" class="form-control" />
-                <span asp-validation-for="InventoryItem.UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="InventoryItem.PC" class="control-label"></label>
