--- a/Pages/Inventory/Create.cshtml
+++ b/Pages/Inventory/Create.cshtml
@@ -4,6 +4,9 @@
 @{
     ViewData["Title"] = "Create";
 }
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 
 <h1>Create</h1>
 
@@ -15,7 +18,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="InventoryItem.UserId" class="control-label"></label>
-                <input asp-for="InventoryItem.UserId" class="form-control" />
+                <input asp-for="InventoryItem.UserId" class="form-control" value="@UserManager.GetUserId(User)" />
                 <span asp-validation-for="InventoryItem.UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
