Update App name to InventoryApp

--- a/Pages/Inventory/Delete.cshtml
+++ b/Pages/Inventory/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model WebApp.Pages.Inventory.DeleteModel
+@model InventoryApp.Pages.Inventory.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
