--- a/Pages/Inventory/Details.cshtml
+++ b/Pages/Inventory/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model WebApp.Pages.Inventory.DetailsModel
+@model InventoryApp.Pages.Inventory.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
