--- a/Pages/Inventory/Create.cshtml
+++ b/Pages/Inventory/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model WebApp.Pages.Inventory.CreateModel
+@model InventoryApp.Pages.Inventory.CreateModel
 
 @{
     ViewData["Title"] = "Create";
