--- a/Pages/Inventory/Edit.cshtml
+++ b/Pages/Inventory/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model WebApp.Pages.Inventory.EditModel
+@model InventoryApp.Pages.Inventory.EditModel
 
 @{
     ViewData["Title"] = "Edit";
