--- a/Pages/Inventory/Index.cshtml
+++ b/Pages/Inventory/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model WebApp.Pages.Inventory.IndexModel
+@model InventoryApp.Pages.Inventory.IndexModel
 
 @{
     ViewData["Title"] = "Index";
