--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using WebApp
-@using WebApp.Data
-@namespace WebApp.Pages
+@using InventoryApp
+@using InventoryApp.Data
+@namespace InventoryApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
