--- a/Pages/Inventory/Create.cshtml
+++ b/Pages/Inventory/Create.cshtml
@@ -18,7 +18,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="InventoryItem.UserId" class="control-label"></label>
-                <input asp-for="InventoryItem.UserId" class="form-control" value="@UserManager.GetUserId(User)" />
+                <input asp-for="InventoryItem.UserId" class="form-control" value="@UserManager.GetUserId(User)" readonly />
                 <span asp-validation-for="InventoryItem.UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
