--- a/Pages/Inventory/Edit.cshtml
+++ b/Pages/Inventory/Edit.cshtml
@@ -16,7 +16,7 @@
             <input type="hidden" asp-for="InventoryItem.Id" />
             <div class="form-group">
                 <label asp-for="InventoryItem.UserId" class="control-label"></label>
-                <input asp-for="InventoryItem.UserId" class="form-control" />
+                <input asp-for="InventoryItem.UserId" class="form-control" readonly />
                 <span asp-validation-for="InventoryItem.UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
