--- a/Pages/Users/Index.cshtml
+++ b/Pages/Users/Index.cshtml
@@ -14,48 +14,57 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Users[0].Id)
+                <a asp-page="./Index" asp-route-sortOrder="@Model.IdSort">Id</a>
+                @if (Model.CurrentSort == "id_desc") { <span>&#x25BC;</span> }
+                else if (Model.CurrentSort == "") { <span>&#x25B2;</span> }
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Users[0].Email)
+                <a asp-page="./Index" asp-route-sortOrder="@Model.EmailSort">Email</a>
+                @if (Model.CurrentSort == "email_desc") { <span>&#x25BC;</span> }
+                else if (Model.CurrentSort == "Email") { <span>&#x25B2;</span> }
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Users[0].EmailConfirmed)
+                <a asp-page="./Index" asp-route-sortOrder="@Model.EmailConfirmedSort">Email Confirmed</a>
+                @if (Model.CurrentSort == "emailConfirmed_desc") { <span>&#x25BC;</span> }
+                else if (Model.CurrentSort == "EmailConfirmed") { <span>&#x25B2;</span> }
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Users[0].PhoneNumber)
+                <a asp-page="./Index" asp-route-sortOrder="@Model.PhoneNumberSort">Phone Number</a>
+                @if (Model.CurrentSort == "phoneNumber_desc") { <span>&#x25BC;</span> }
+                else if (Model.CurrentSort == "PhoneNumber") { <span>&#x25B2;</span> }
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Users[0].PhoneNumberConfirmed)
+                <a asp-page="./Index" asp-route-sortOrder="@Model.PhoneNumberConfirmedSort">Phone Number Confirmed</a>
+                @if (Model.CurrentSort == "phoneNumberConfirmed_desc") { <span>&#x25BC;</span> }
+                else if (Model.CurrentSort == "PhoneNumberConfirmed") { <span>&#x25B2;</span> }
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var user in Model.Users)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => user.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => user.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => user.EmailConfirmed)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => user.PhoneNumber)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => user.PhoneNumberConfirmed)
-                </td>
-                <td>
-                    <a asp-page="./Edit" asp-route-id="@user.Id">Edit</a> |
-                    <a asp-page="./Details" asp-route-id="@user.Id">Details</a> |
-                    <a asp-page="./Delete" asp-route-id="@user.Id">Delete</a>
-                </td>
-            </tr>
-        }
+@foreach (var user in Model.Users) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => user.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => user.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => user.EmailConfirmed)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => user.PhoneNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => user.PhoneNumberConfirmed)
+            </td>
+            <td>
+                <a asp-page="./Edit" asp-route-id="@user.Id">Edit</a> |
+                <a asp-page="./Details" asp-route-id="@user.Id">Details</a> |
+                <a asp-page="./Delete" asp-route-id="@user.Id">Delete</a>
+            </td>
+        </tr>
+}
     </tbody>
 </table>
