Added sum of InventoryItems and Users

--- a/Pages/Inventory/Index.cshtml
+++ b/Pages/Inventory/Index.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Inventory</h1>
+<h1>Inventory (@Model.TotalItems Total, @Model.UserItems Yours)</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
