--- a/Pages/Users/Index.cshtml
+++ b/Pages/Users/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Users</h1>
+<h1>Users (@Model.TotalUsers Total)</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
