--- a/Pages/Users/Edit.cshtml
+++ b/Pages/Users/Edit.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="User.EmailConfirmed" class="control-label"></label>
-                <input asp-for="User.EmailConfirmed" class="form-control" />
+                <input asp-for="User.EmailConfirmed" class="form-check-input" type="checkbox" />
                 <span asp-validation-for="User.EmailConfirmed" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -31,7 +31,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="User.PhoneNumberConfirmed" class="control-label"></label>
-                <input asp-for="User.PhoneNumberConfirmed" class="form-control" />
+                <input asp-for="User.PhoneNumberConfirmed" class="form-check-input" type="checkbox" />
                 <span asp-validation-for="User.PhoneNumberConfirmed" class="text-danger"></span>
             </div>
             <div class="form-group">
